app/assets/stylesheets/partials/main/_menus.scss
// Menu style
// Sample menu style
// =================================================================================

/*
 * Menu style
 */
.main-navigation {
  ul {
		@include reset-list;
	}
}

nav {
  @include border-bottom-radius(3px);
  background: $gray;
  @include adjust-font-size-to(14px);
  padding: $padding*0.15 $padding*0.25;
}
.nav-pills > li {

  &.logout {
    float: right;
  }

  [class^="icon-"],
  [class*=" icon-"] {
    float: left;
    margin: -2px 6px 0 -4px;
  }
}

.nav-tabs .open .dropdown-toggle, .nav-pills .open .dropdown-toggle, .nav > li.dropdown.open.active > a:hover{
  color: #0d59a6;
  background-color: #eeeeee;
}

.dropdown-menu > li > a{
  color: #0d59a6;
  padding: 8px;
}

.dropdown-menu > li:last-child > a{
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.dropdown-menu > li:nth-of-type(2) > a{
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.dropdown-menu > li > a:hover{
  color: #0d59a6;
  background-color: #eeeeee;
}

